# VolumeSync

./: .gitignore  Audio.cpp  Audio.h  CMakeLists.txt  Config.cpp  Config.h  InstallScript.nsi  LICENSE  README.md  UninstallScript.nsi  main.cpp  make-installer.bat
